--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "5.1.9",
     "rollup-watch": "^4.3.1",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "2.6.14"
   },
   "dependencies": {}
 }
